a couple of bug fixes: - fixed sensor detail chart not showing data - fixed? out ouf memory in PowerChalange page - temporary fix for wrong / redirect

--- a/resource/web/sensor_detail.tmpl
+++ b/resource/web/sensor_detail.tmpl
@@ -10,7 +10,7 @@
 </div>
 <script>
     $(function(){
-		createChart("#chart", "/data/sensor?aggr=minute&id={{sensor.getID()}}", 5*60*1000);
+		createChart("#chart", "/data/sensor?aggr=minute&id={{sensor.getId()}}", 5*60*1000);
 	});
 </script>
 
