--- a/resource/web/event_config.tmpl
+++ b/resource/web/event_config.tmpl
@@ -133,10 +133,8 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title" id="exampleModalLabel">Event</h4>
+                <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                <h4 class="modal-title">Event</h4>
             </div>
             <form method="POST">
                 <div class="modal-body">
