--- a/resource/web/sensor_config.tmpl
+++ b/resource/web/sensor_config.tmpl
@@ -86,8 +86,9 @@
                 {{/detectedSensors}}
             </table>
         </div>
-    </div>
+    </div> <!-- /panel -->
 </div>
+<div class="col-md-12 vertical-space"></div>
 
 <div class="col-md-12">
     <div class="panel panel-default drop-shadow">
@@ -140,8 +141,9 @@
                 {{/extUsers}}
             </table>
         </div>
-    </div>
+    </div> <!-- /Panel -->
 </div>
+<div class="col-md-12 vertical-space"></div>
 
 <div class="col-md-12">
     <div class="panel panel-default drop-shadow">
@@ -185,8 +187,9 @@
                 {{/extSensor}}
             </table>
         </div>
-    </div>
+    </div> <!-- /Panel -->
 </div>
+<div class="col-md-12 vertical-space"></div>
 
 
 <!------------- MODALS --------------->
@@ -255,10 +258,8 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <h4 class="modal-title" id="exampleModalLabel">Sensor</h4>
+                <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                <h4 class="modal-title">Sensor</h4>
             </div>
             <form method="POST">
                 <div class="modal-body">
@@ -322,9 +323,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
                 <h4 class="modal-title">External User</h4>
             </div>
             <form method="POST">
