Changed new trigger flow button to do post. fixed issue 47

--- a/resource/web/trigger.tmpl
+++ b/resource/web/trigger.tmpl
@@ -1,7 +1,7 @@
 <h1 class="page-header">
     Triggers
 
-    <form class="pull-right">
+    <form class="pull-right" method="POST">
         <input type="hidden" name="action" value="create_flow" />
         <button type="submit" class="btn btn-default">
             <span class="glyphicon glyphicon-plus"></span>
